--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link href="style.css" rel="stylesheet">
+    <link href="./public/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!---Navigation-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="btslogo.jpg" height="15%" width="15%"></a>
+            <a class="navbar-brand" href="#"><img src="public/images/btslogo.jpg" height="15%" width="15%"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarRespnsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
